Home layout refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <!-- Home Activity -->
     <string name="act_home_tv_user_name">Bedrick Prokop</string>
     <string name="act_home_tv_user_email">bedrick.prokop@gmail.com</string>
-    <string name="act_home_ib_send_money">Send money</string>
-    <string name="act_home_ib_history">History</string>
+    <string name="act_home_ib_send_money">Enviar dinheiro</string>
+    <string name="act_home_ib_history">Historico de envios</string>
+    <string name="act_home_iv_user">User</string>
 </resources>
