--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,24 @@
 <resources>
     <string name="app_name">SendMoney</string>
-
-
+    
     <!-- Home Activity -->
     <string name="act_home_tv_user_name">Bedrick Prokop</string>
     <string name="act_home_tv_user_email">bedrick.prokop@gmail.com</string>
     <string name="act_home_ib_send_money">Enviar dinheiro</string>
-    <string name="act_home_ib_history">Historico de envios</string>
-    <string name="act_home_iv_user">User</string>
+    <string name="act_home_ib_history">Histórico de envios</string>
+    <string name="act_home_iv_user">Usuário</string>
 
     <!-- Contacts Activity -->
     <string name="act_contacts_ab_title">ENVIAR DINHEIRO</string>
-    <string name="item_contacts_iv_contact">Contact picture</string>
-
+    <string name="item_contacts_iv_contact">Imagem do contato</string>
 
     <!-- Transfer Dialog -->
-    <string name="dialog_transfer_ib_close">Close</string>
+    <string name="dialog_transfer_ib_close">Fechar</string>
     <string name="dialog_transfer_tv_value_label">Valor a enviar:</string>
     <string name="dialog_transfer_et_transfer_value_hint">R$ 0,00</string>
     <string name="dialog_transfer_bt_transfer_money">Enviar</string>
+
+    <!-- TransferHistory Activity -->
+    <string name="act_history_ab_title">HISTÓRICO DE ENVIOS</string>
+    <string name="item_transfer_history_iv_transfer">Imagem da transferência</string>
 </resources>
